public class Empresa {
    private int num_empleados;

    public Empresa(int num_empleados){
        this.num_empleados=num_empleados;
    }
    public int getnum_empleados(){
        return this.num_empleados;
    }
    public void setnum_empleados(){
        this.num_empleados=num_empleados;
    } 
}
